syntax = "proto3";
option java_package = "com.yhglobal.gongxiao.inventory.insertinventory.microservice";
option java_outer_classname = "InsertInventoryStructure";

import "gongxiao.global.structure.proto";
import "commen.model.proto";

service InsertInventoryService{
    //1 导入EAS货品即时库存
    rpc insertInventory (GetInsertInventoryRequest) returns (GetInsertInventoryResponse) {}

    //2 核对EAS货品库存
    rpc checkEasInventory (GetCheckEasInventoryRequest) returns (GetCheckEasInventoryResponse) {}

    //3 查询核对EAS货品库存
    rpc selectEasInventoryCheck (SelectCheckEasInventoryRequest) returns (SelectCheckEasInventoryResponse) {}

    //4 查询核对EAS货品库存
    rpc selectEasInventoryCheckItem (SelectEasInventoryCheckItemRequest) returns (SelectEasInventoryCheckItemResponse) {}

}

//1
message GetInsertInventoryRequest{
    int64 projectId=1;
}
message GetInsertInventoryResponse{
    int32 errorCode = 1;
}

//2
message GetCheckEasInventoryRequest{
    int64 projectId=1;
}
message GetCheckEasInventoryResponse{
    int32 errorCode = 1;
}

//3
message SelectCheckEasInventoryRequest{
    int64 projectId=1;
}
message SelectCheckEasInventoryResponse{
    repeated EasInventoryCheckResult easInventoryCheckResult = 1;
}

message EasInventoryCheckResult{
    int64 id=1;             //主键id
    int64 projectId=2;      //项目id
    int64 dateTime=3;        //日期
    string projectName=4;   //项目名称
    int32 xpsInventoryQuantity=5;   //分销系统库存总量
    int32 easInventoryQuantity=6;   //EAS库存总量
    int32 differentQuantity=7;       //差异数量
    int32 exception=8;           //是否异常
    int64 createTime=9;             //创建时间
}

//4
message SelectEasInventoryCheckItemRequest{
    int64 projectId=1;
    int64 dateTime=2;
}
message SelectEasInventoryCheckItemResponse{
    repeated EasAndXpsInventoryModel list = 1;
}

message EasAndXpsInventoryModel{
    int64 id=1;
    int64 dateTime=2;      //日期
    string projectId=3;   //项目id
    string projectName=4;  //项目名称
    string warehouseId=5;  //仓库id
    string warehouseName=6;  //仓库名称
    string productId=7;       //商品id
    string productCode=8;     //商品code
    string productName=9;     //商品名称
    string batchNo=10;         //批次号
    int32 inventoryType=11;      //库存类型
    int32 purchaseType=12;       //采购类型
    int32 fenxiaoQuantity=13;    //分销库存数量
    int32 easQuantity=14;        //eas库存数量
    int32 differentQuantity=15;  //差异数理
    int64 createTime=16;        //创建时间
}

